# generative-ai

agent-engines/agent-starter-pack/: README.md  pyproject.toml
agent-engines/agent-starter-pack/patterns/agent_framework_base_react/: README.md
agent-engines/agent-starter-pack/patterns/agent_framework_base_react/template/: .templateconfig
agent-engines/agent-starter-pack/patterns/agent_framework_memory/template/: .templateconfig
agent-engines/agent-starter-pack/patterns/crew_ai_base/template/: .templateconfig
agent-engines/agent-starter-pack/patterns/custom_rag_qa/: README.md
agent-engines/agent-starter-pack/patterns/custom_rag_qa/app/: agent.py
agent-engines/agent-starter-pack/patterns/custom_rag_qa/app/utils/: decorators.py
agent-engines/agent-starter-pack/patterns/custom_rag_qa/template/: .templateconfig
agent-engines/agent-starter-pack/patterns/langgraph_base_react/template/: .templateconfig
agent-engines/agent-starter-pack/src/cli/: main.py
agent-engines/agent-starter-pack/src/core/: gcp.py  template.py
gemini/sample-apps/: README.md
gemini/sample-apps/e2e-gen-ai-app-starter-pack/: README.md
